--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
       <meta name="description" content="LAVRICARTAXO Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="fontawesome/css/all.css">
-      <link rel="stylesheet" href="fontawesome/css/all.min.css">
       <link rel="icon" type="image/jpg" href="Images/icon.png" />
+      <link rel="stylesheet" href="fontawesome/css/all.css">
+      <link rel="stylesheet" href="fontawesome/css/all.min.css">     
       <link rel="stylesheet" href="CSS/style.css" type="text/css">
       <script src="JS/script.js"></script>
       <title>Lavricartaxo</title>
   </head>
-<body>
+<body onload="slideshow()">
   <div class="header"> <!--Header-->
     <div class="top"> <!--Header Subsection Top-->
       <div class="logo"> <!--Div logo-->
@@ -40,7 +40,7 @@
 
     <button class="sideBtnPhone" id="sideBtnRight"><i class="fas fa-chevron-right"></i></button> <!--Sidebutton Phone Mode-->
     <button class="sideBtnPhone" id="sideBtnLeft"><i class="fas fa-chevron-left"></i></button> <!--Sidebutton Phone Mode-->
-    
+
     <ul class="navMenu"> <!--Menu-->
       <a href="index.html"><li class="menuText" id="start">INICIO</li></a>
       <a href="quemsomos.html"><li class="menuText">QUEM SOMOS</li></a>
