--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
   </div>
   <nav>
 
-    <button class="sideBtnPhone" id="sideBtnRight"><i class="fas fa-chevron-right"></i></button> <!--Sidebutton Phone Mode-->
-    <button class="sideBtnPhone" id="sideBtnLeft"><i class="fas fa-chevron-left"></i></button> <!--Sidebutton Phone Mode-->
+    <button class="sideBtnPhone rightBtn" id="sideBtnRight"><i class="fas fa-chevron-right"></i></button> <!--Sidebutton Phone Mode-->
+    <button class="sideBtnPhone leftBtn" id="sideBtnLeft"><i class="fas fa-chevron-left"></i></button> <!--Sidebutton Phone Mode-->
 
     <ul class="navMenu"> <!--Menu-->
       <a href="index.html"><li class="menuText" id="start">INICIO</li></a>
@@ -71,7 +71,7 @@
 
     <div class="welcome"> <!--Text-->
       <p><br><h2><b>Seja bem vindo ao nosso site</b></h2><br>É com enorme prazer que registamos a sua presença no nosso site, esperamos que encontre tudo o que precisa para realizar os seus projectos com sucesso!.<br><br>A LAVRICARTAXO - Cooperativa Agro-Pecuária do Cartaxo, C.R.L.. coloca ao seu dispôr uma vasta equipa para que possa ter todo o apoio que considere necessário.<br><br>O nosso objectivo é servir os nossos clientes com competência e dedicação para que o nosso cliente volte sempre!<br><br>Ao adquirir produtos na nossa empresa deve saber que estará sempre a comprar qualidade ao melhor preço! Volte sempre, será sempre um gosto tê-lo de volta!</p>
-      <br><br><br><br><br><br><h2><b>As nossas marcas</b></h2>       
+          
     </div>
     
     <!--Brands-->
