--- a/index.html
+++ b/index.html
@@ -36,11 +36,9 @@
       </div>          
     </div>    
   </div>
+  <button class="sideBtnPhone rightBtn" id="sideBtnRight" onclick="sidebuttonR"><i class="fas fa-chevron-right"></i></button> <!--Sidebutton Phone Mode-->
+  <button class="sideBtnPhone leftBtn" id="sideBtnLeft" onclick="sidebuttonL"><i class="fas fa-chevron-left"></i></button> <!--Sidebutton Phone Mode-->
   <nav>
-
-    <button class="sideBtnPhone rightBtn" id="sideBtnRight"><i class="fas fa-chevron-right"></i></button> <!--Sidebutton Phone Mode-->
-    <button class="sideBtnPhone leftBtn" id="sideBtnLeft"><i class="fas fa-chevron-left"></i></button> <!--Sidebutton Phone Mode-->
-
     <ul class="navMenu"> <!--Menu-->
       <a href="index.html"><li class="menuText" id="start">INICIO</li></a>
       <a href="quemsomos.html"><li class="menuText">QUEM SOMOS</li></a>
