--- a/contatos.html
+++ b/contatos.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/jpg" href="Images/icon.png" />
     <link rel="stylesheet" href="CSS/style.css" type="text/css">
+    <link rel="stylesheet" href="fontawesome/css/all.css">
+    <link rel="stylesheet" href="fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="Css/bootstrap.min.css"> 
     <script src="JS/script.js"></script>
     <!-- bootstrap-->
     <!-- <link href="Css/bootstrap.min.css" rel="stylesheet">
@@ -40,7 +43,7 @@
           <a href="quemsomos.html"><li class="menuText">QUEM SOMOS</li></a>
           <a href="galeria.html"><li class="menuText">GALERIA</li></a>
           <a href="produtos.html"><li class="menuText">PRODUTOS</li></a>
-          <a href="contatos.html"><li class="menuText">CONTATOS</li></a>
+          <a href="#"><li class="menuText">CONTATOS</li></a>
           <a href="marcas.html"><li class="menuText">MARCAS</li></a>
           <a href="associados.html"><li class="menuText">ASSOCIADOS</li></a>
         </ul>
