--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
       </div>          
     </div>    
   </div>
-  <button class="sideBtnPhone rightBtn" id="sideBtnRight" onclick="sidebuttonR"><i class="fas fa-chevron-right"></i></button> <!--Sidebutton Phone Mode-->
-  <button class="sideBtnPhone leftBtn" id="sideBtnLeft" onclick="sidebuttonL"><i class="fas fa-chevron-left"></i></button> <!--Sidebutton Phone Mode-->
+  <button class="sideBtnPhone rightBtn" id="sideBtnRight" onclick="sidebuttonR()"><i class="fas fa-chevron-right"></i></button> <!--Sidebutton Phone Mode-->
+  <button class="sideBtnPhone leftBtn" id="sideBtnLeft" onclick="sidebuttonL()"><i class="fas fa-chevron-left"></i></button> <!--Sidebutton Phone Mode-->
   <nav>
     <ul class="navMenu"> <!--Menu-->
-      <a href="index.html"><li class="menuText" id="start">INICIO</li></a>
+      <a href="#"><li class="menuText" id="start">INICIO</li></a>
       <a href="quemsomos.html"><li class="menuText">QUEM SOMOS</li></a>
       <a href="galeria.html"><li class="menuText">GALERIA</li></a>
       <a href="produtos.html"><li class="menuText">PRODUTOS</li></a>
