--- a/marcas.html
+++ b/marcas.html
@@ -36,86 +36,94 @@
       <a href="galeria.html"><li class="menuText">GALERIA</li></a>
       <a href="produtos.html"><li class="menuText">PRODUTOS</li></a>
       <a href="contatos.html"><li class="menuText">CONTATOS</li></a>
-      <a href="marcas.html"><li class="menuText">MARCAS</li></a>
+      <a href="#"><li class="menuText">MARCAS</li></a>
       <a href="associados.html"><li class="menuText">ASSOCIADOS</li></a>
     </ul>
   </nav>
   <div class="welcome">
-    <h2><b>As nossas marcas</b></h2>       
-  </div>
-  <div class="marcas">
+  </br><h1><b>As nossas marcas</b></h1></br></br>
+  <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;" ><h2>Adubos</h2></div>
     <a href="" >
-      <div class="marca">
-        <img src="Images/marcas/agrolex.png" >
+      <div>
+        <img src="Images/marcas/deiba.png" style="float:left;" width="150px">
+      </div>
+    </a>
+    <a href="" >
+      <div >
+        <img src="Images/marcas/cadubal.png" style="float:left; " width="150px">
       </div>
     </a>
     <a href="">
-      <div class="marca">
-        <img src="Images/marcas/sirosubs.png" >
+      <div >
+        <img src="Images/marcas/nutrofertil.png" width="150px">
+      </div>
+    </a></br>
+  
+  <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;"><h2>Agroquimicos</h2></div>
+    <a href="" >
+      <div>
+        <img src="Images/marcas/basf.png" style="float:left;" width="150px">
+      </div>
+    </a>
+    <a href="" >
+      <div >
+        <img src="Images/marcas/belchim.png" style="float:left; " width="150px">
       </div>
     </a>
     <a href="">
-      <div class="marca">
-        <img src="Images/marcas/belchim.png" >
+      <div >
+        <img src="Images/marcas/epagro.png" style="float:left; " width="150px">
       </div>
     </a>
-    <a href="">
-      <div class="marca">
-        <img src="Images/marcas/nutrofertil.png" >
+    <a href="" >
+      <div>
+        <img src="Images/marcas/iqv.png" width="150px">
       </div>
-    </a>
-  </div>
-  <div class="marcas">
-    <a href="">
-      <div class="marca">
-        <img src="Images/marcas/biona.png">
-      </div>
-    </a>
-    <a href="">
-      <div class="marca">
-        <img src="Images/marcas/cadubal.png" >
-      </div>
-    </a>
-    <a href="">
-      <div class="marca">
-        <img src="Images/marcas/deiba.png" >
-      </div>
-    </a>
-    <a href="">
-      <div class="marca">
-        <img src="Images/marcas/lena.png">
-      </div>
-    </a>
-  </div>
-  <div class="marcas">
-    <a href="">
-      <div class="marca">
-        <img src="Images/marcas/einhell.png" >
-      </div>
-    </a>
-    <a href="">
-      <div class="marca">
-        <img src="Images/marcas/epagro.png" >
-      </div>
-    </a>
-    <a href="">
-      <div class="marca">
-        <img src="Images/marcas/fertiprado.png" >
-      </div>
-    </a>
-    <a href="">
-      <div class="marca">
-        <img src="Images/marcas/fito.png">
-      </div>
-    </a>
-    <a href="">
-      <div class="marca">
-        <img src="Images/marcas/iqv.png">
-      </div>
-    </a>
-  </div>
+    </a></br>
+  
 
-  <!------------------Tablet Marcas------------------>
+  <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;"><h2>Alimentação Aminal</h2></div>
+    <a href="" >
+      <div>
+        <img src="Images/marcas/biona.png" width="150px">
+      </div>
+    </a></br>
+
+    <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;"><h2>Petcare</h2></div>
+    <a href="" >
+      <div>
+        <img src="Images/marcas/agrolex.png" width="150px">
+      </div>
+    </a></br>
+
+    <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;"><h2>Veterinária</h2></div>
+    <a href="">
+      <div>
+        <img src="Images/marcas/fertiprado.png" style="float:left; " width="150px">
+      </div>
+    </a>
+    <a href="">
+      <div>
+        <img src="Images/marcas/fito.png" width="150px">
+      </div>
+    </a></br>
+
+    <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;"><h2>Bricolage</h2></div>
+    <a href="" >
+      <div>
+        <img src="Images/marcas/einhell.png" width="150px">
+      </div>
+    </a></br>
+
+    <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;"><h2>Máquinas</h2></div>
+    <a href="">
+      <div>
+        <img src="Images/marcas/lena.png" width="150px">
+      </div>
+    </a></br>
+</div>  
+
+  <!------------------Tablet Marcas----------------
 
   <div class="marcasTablet">
     <a href="" >
@@ -191,8 +199,8 @@
         <img src="Images/marcas/iqv.png">
       </div>
     </a>
-  </div>
-  <footer class="footerBottom">
+  </div>-->
+  <footer class="footerBottom"> <!--Footer-->
     <div class="wheretofindusFooter">
       <p>ONDE NOS ENCONTRAR<br><br>Rua Batalhoz nr.81<br>2070-069 Cartaxo</p>
     </div>
