--- a/quemsomos.html
+++ b/quemsomos.html
@@ -32,7 +32,7 @@
   <nav>
     <ul class="navMenu">
       <a href="index.html"><li class="menuText">INICIO</li></a>
-      <a href="quemsomos.html"><li class="menuText">QUEM SOMOS</li></a>
+      <a href="#"><li class="menuText">QUEM SOMOS</li></a>
       <a href="galeria.html"><li class="menuText">GALERIA</li></a>
       <a href="produtos.html"><li class="menuText">PRODUTOS</li></a>
       <a href="contatos.html"><li class="menuText">CONTATOS</li></a>
