--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </nav>
   <div class="main"> <!--"Body"/Main/Content-->
     <div class="news"> <!--Div news widget-->
-      <script type="text/javascript" src="JS/newsWidget.js?widgettitle=Noticías&amp;categories=126,127,128,129,&amp;showRelease=0&amp;width=auto&amp;headlinebold=1&amp;headlinesonly=1&amp;headlinecolor=black&amp;briefcolor=ffffff&amp;textcolor=white&amp;typeface=arial&amp;fontsize=11&amp;width=auto&amp;headlinesepstyle=solid&amp;showimages=0&amp;numstories=5&amp;bgcolor=rgba(255, 255, 255, 0)&amp;urldest=247pr "></script> <!--News widget-->
+      <script type="text/javascript" src="JS/newsWidget.js?widgettitle=Noticías&amp;categories=126,127,128,129,&amp;showRelease=0&amp;width=auto&amp;headlinebold=1&amp;headlinesonly=1&amp;headlinecolor=white&amp;briefcolor=ffffff&amp;textcolor=black&amp;typeface=arial&amp;fontsize=11&amp;width=auto&amp;headlinesepstyle=solid&amp;showimages=0&amp;numstories=5&amp;bgcolor=rgba(255, 255, 255, 0)&amp;urldest=247pr "></script> <!--News widget-->
     </div>
 
     <!--Slideshow-->
@@ -65,7 +65,7 @@
     <div class="welcome"> <!--Text-->
       <p><br><h2><b>Seja bem vindo ao nosso site</b></h2><br>É com enorme prazer que registamos a sua presença no nosso site, esperamos que encontre tudo o que precisa para realizar os seus projectos com sucesso!.<br><br>A LAVRICARTAXO - Cooperativa Agro-Pecuária do Cartaxo, C.R.L.. coloca ao seu dispôr uma vasta equipa para que possa ter todo o apoio que<br>considere necessário.<br><br>O nosso objectivo é servir os nossos clientes com competência e dedicação para que o nosso cliente volte sempre!<br><br>Ao adquirir produtos na nossa empresa deve saber que estará sempre a comprar qualidade ao melhor preço! Volte sempre, será sempre um gosto tê-lo de volta!</p>
     </div> 
-
+    <br>
     <!--Carousel-->
     <div class="marcass">
       <div class="marcas">
@@ -137,7 +137,6 @@
       </div>
     </div><!--End-->
   </div><!--/Main-->
-    <br>
   <footer class="footerBottom"> <!--Footer-->
     <div class="wheretofindusFooter">
       <p>ONDE NOS ENCONTRAR<br><br>Rua Batalhoz nr.81<br>2070-069 Cartaxo</p>
