--- a/contatos.html
+++ b/contatos.html
@@ -10,33 +10,33 @@
     <link rel="stylesheet" href="CSS/style.css" type="text/css">
     <link rel="stylesheet" href="fontawesome/css/all.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="Css/bootstrap.min.css"> 
+    <link rel="stylesheet" href="Css/bootstrap.min.css"> <!--Bootstrap está a entrar em confito com o style do resto da página-->
     <script src="JS/script.js"></script>
-    <!-- bootstrap-->
-    <!-- <link href="Css/bootstrap.min.css" rel="stylesheet">
-    <script src="JS/bootstrap.bundle.mi.js"></script> -->
-    <!--/bootstrap -->
-   
     <title>Lavricartaxo</title>
 </head>
 <body>
-    <div class="header">
-        <div class="top">
-          <div class="logo">
-            <a href="index.html"><img src="Images/logo.png" alt="logo" class="logoIMG"></a> 
-          </div>
-          <div class="weatherWidget">
-            <div id="weatherWidget" >
-              <script type="text/javascript" async src="JS/weatherWidget.js"></script>
-            </div> 
-          </div>
-          <div class="weatherWidgetTablet">
-            <div id="weatherWidgetTablet">
-              <script type="text/javascript" async src="JS/weatherWidgetTablet.js"></script>
-            </div>
-          </div>              
-        </div>    
+  <div class="header"> <!--Header-->
+    <div class="top"> <!--Header Subsection Top-->
+      <div class="logo"> <!--Div logo-->
+        <a href="index.html"><img src="Images/logo.png" alt="logo" class="logoIMG"></a> <!--Logo Lavricartaxo-->
       </div>
+      <div class="weatherWidget"> <!--Div weather widget PC-->
+        <div id="weatherWidget" >
+          <script type="text/javascript" async src="JS/weatherWidget.js"></script> <!--Weather width PC-->
+        </div> 
+      </div>  
+      <div class="weatherWidgetTablet"> <!--Div weather widget Tablet-->
+        <div id="weatherWidgetTablet">
+          <script type="text/javascript" async src="JS/weatherWidgetTablet.js"></script> <!--Weather width Tablet-->
+        </div>
+      </div>   
+      <div class="weatherWidgetPhone"> <!--Div weather widget Phone-->
+        <div id="weatherWidgetPhone">
+          <script type="text/javascript" async src="JS/weatherWidgetPhone.js"></script> <!--Weather width Phone-->
+        </div>
+      </div>          
+    </div>    
+  </div>   
       <nav>
         <ul class="navMenu">
           <a href="index.html"><li class="menuText">INICIO</li></a>
@@ -54,6 +54,8 @@
           <h1></br>Encontre-nos aqui</h1>
           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12373.9691393483!2d-8.791160000000001!3d39.163528!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb27463f5a3d96d77!2sLavricartaxo-Cooperativa%20Agro-Pecu%C3%A1ria%20do%20Cartaxo%20C.R.L.!5e0!3m2!1spt-PT!2spt!4v1616068831267!5m2!1spt-PT!2spt" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
+      </div>
+    </div>
         <!--<div class="col-sm-6" class="contact-address">
             <h2></br>Endereço </h2>
             <ul>
@@ -96,7 +98,6 @@
     </div>
   </section>
   <!-- End Contact Section -->
-      </div>
       <div class="col-sm-6">
         <h1></br>Contacte-nos</br></br></h1>
       </div>
@@ -129,19 +130,20 @@
         <button type="reset" class="btn btn-danger" >Limpar</button>
       </form>
     </div>
-<footer class="footerBottom">
-    <div class="wheretofindusFooter">
-      <p>ONDE NOS ENCONTRAR<br><br>Rua Batalhoz nr.81<br>2070-069 Cartaxo</p>
-    </div>
-    <div class="contactusFooter">
-      <p>CONTACTE-NOS<br><br>243 700 240<br>243 700 249</p>
-    </div>
-    <div class="openFooter">
-      <p>ABERTOS<br><br>De Segunda a Sexta-feira das 9H ás 13H e das 14:30H ás 18:30H</br>Aos Sábados das 9H ás 12:30H</p>
-    </div>
-      <br><br><br><br><br><br>
-      <p>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.</p>
-      <p>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
-  </footer>
+
 </body>
+<footer class="footerBottom">
+  <div class="wheretofindusFooter">
+    <p>ONDE NOS ENCONTRAR<br><br>Rua Batalhoz nr.81<br>2070-069 Cartaxo</p>
+  </div>
+  <div class="contactusFooter">
+    <p>CONTACTE-NOS<br><br>243 700 240<br>243 700 249</p>
+  </div>
+  <div class="openFooter">
+    <p>ABERTOS<br><br>De Segunda a Sexta-feira das 9H ás 13H e das 14:30H ás 18:30H</br>Aos Sábados das 9H ás 12:30H</p>
+  </div>
+    <br><br><br><br><br><br>
+    <p>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.</p>
+    <p>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
+</footer>
 </html>
