--- a/quemsomos.html
+++ b/quemsomos.html
@@ -12,21 +12,26 @@
     <title>Lavricartaxo</title>
 </head>
 <body>
-  <div class="header">
-    <div class="top">
-      <div class="logo">
-        <a href="index.html"><img src="Images/logo.png" alt="logo" class="logoIMG"></a> 
+  <div class="header"> <!--Header-->
+    <div class="top"> <!--Header Subsection Top-->
+      <div class="logo"> <!--Div logo-->
+        <a href="index.html"><img src="Images/logo.png" alt="logo" class="logoIMG"></a> <!--Logo Lavricartaxo-->
       </div>
-      <div class="weatherWidget">
+      <div class="weatherWidget"> <!--Div weather widget PC-->
         <div id="weatherWidget" >
-          <script type="text/javascript" async src="JS/weatherWidget.js"></script>
+          <script type="text/javascript" async src="JS/weatherWidget.js"></script> <!--Weather width PC-->
         </div> 
-      </div>
-      <div class="weatherWidgetTablet">
+      </div>  
+      <div class="weatherWidgetTablet"> <!--Div weather widget Tablet-->
         <div id="weatherWidgetTablet">
-          <script type="text/javascript" async src="JS/weatherWidgetTablet.js"></script>
+          <script type="text/javascript" async src="JS/weatherWidgetTablet.js"></script> <!--Weather width Tablet-->
         </div>
-      </div>                
+      </div>   
+      <div class="weatherWidgetPhone"> <!--Div weather widget Phone-->
+        <div id="weatherWidgetPhone">
+          <script type="text/javascript" async src="JS/weatherWidgetPhone.js"></script> <!--Weather width Phone-->
+        </div>
+      </div>          
     </div>    
   </div>
   <nav>
@@ -48,19 +53,20 @@
     </br></br>Sendo uma cooperativa agrícola, somos uma instituição transparente e organizada, numa estrutura com três órgãos sociais clássicos e independentes, Assembleia Geral, Direcção e Conselho Fiscal, que garantem o correcto funcionamento da instituição.
     </br></br>Consulte-nos ou visite-nos e comprove a qualidade dos nossos serviços e produtos! Estamos sempre ao dispôr dos nossos associados, fornecedores e clientes para juntos construírmos uma agricultura melhor, mais produtiva e competitiva!</br></br>
   </div>
-  <footer class="footerBottom">
-    <div class="wheretofindusFooter">
-      <p>ONDE NOS ENCONTRAR<br><br>Rua Batalhoz nr.81<br>2070-069 Cartaxo</p>
-    </div>
-    <div class="contactusFooter">
-      <p>CONTACTE-NOS<br><br>243 700 240<br>243 700 249</p>
-    </div>
-    <div class="openFooter">
-      <p>ABERTOS<br><br>De Segunda a Sexta-feira das 9H ás 13H e das 14:30H ás 18:30H</br>Aos Sábados das 9H ás 12:30H</p>
-    </div>
-      <br><br><br><br><br><br>
-      <p>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.</p>
-      <p>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
-  </footer>
+  
 </body>
+<footer class="footerBottom">
+  <div class="wheretofindusFooter">
+    <p>ONDE NOS ENCONTRAR<br><br>Rua Batalhoz nr.81<br>2070-069 Cartaxo</p>
+  </div>
+  <div class="contactusFooter">
+    <p>CONTACTE-NOS<br><br>243 700 240<br>243 700 249</p>
+  </div>
+  <div class="openFooter">
+    <p>ABERTOS<br><br>De Segunda a Sexta-feira das 9H ás 13H e das 14:30H ás 18:30H</br>Aos Sábados das 9H ás 12:30H</p>
+  </div>
+    <br><br><br><br><br><br>
+    <p>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.</p>
+    <p>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
+</footer>
 </html>
