--- a/index.html
+++ b/index.html
@@ -51,14 +51,15 @@
   </nav>
   <div class="main"> <!--"Body"/Main/Content-->
     <div class="news"> <!--Div news widget-->
-      <script type="text/javascript" src="JS/newsWidget.js?widgettitle=Noticías&amp;categories=126,127,128,129,&amp;showRelease=0&amp;width=auto&amp;headlinebold=1&amp;headlinesonly=1&amp;headlinecolor=white&amp;briefcolor=ffffff&amp;textcolor=black&amp;typeface=arial&amp;fontsize=11&amp;width=auto&amp;headlinesepstyle=solid&amp;showimages=0&amp;numstories=5&amp;bgcolor=rgba(255, 255, 255, 0)&amp;urldest=247pr "></script> <!--News widget-->
+      <script type="text/javascript" src="JS/newsWidget.js?widgettitle=Noticías&amp;categories=126,127,128,129,&amp;showRelease=0&amp;width=auto&amp;headlinebold=1&amp;headlinesonly=1&amp;headlinecolor=black&amp;briefcolor=ffffff&amp;textcolor=black&amp;typeface=arial&amp;fontsize=11&amp;width=auto&amp;headlinesepstyle=solid&amp;showimages=0&amp;numstories=5&amp;bgcolor=rgba(255, 255, 255, 0)&amp;urldest=247pr "></script> <!--News widget-->
     </div>
 
     <!--Slideshow-->
     <div class="slideshow">
-      <img src="Images/slideshow/bowl tomatos.jpg" alt="" class="slideshowimgs">
+      <img src="Images/slideshow/bowl_tomatos.jpg" alt="" class="slideshowimgs">
       <img src="Images/slideshow/plant.jpg" alt="" class="slideshowimgs">
       <img src="Images/slideshow/view.jpg" alt="" class="slideshowimgs">
+      <img src="Images/slideshow/tractor.jpg" alt="" class="slideshowimgs">
     </div>
     <!--End-->
 
