--- a/galeria.html
+++ b/galeria.html
@@ -47,6 +47,7 @@
   </nav>
   <div class="main">
     <br>  
+    <!--ImageView-->
     <div class="gallery">
       <div class="photo">
         <img src="Images/gallery/chickens.jpg" class="photoWH" onclick="openModal();currentSlide(1)">
@@ -76,50 +77,39 @@
         <img src="Images/gallery/sheeps.jpg" class="photoWH" onclick="openModal();currentSlide(9)"  >
       </div>
     </div>
-  
-  <div id="myModal" class="modal">
+  <div id="imageView" class="modal">
     <div class="close" onclick="closeModal()">&times;</div>
-    <div class="modal-content">
-      <div class="mySlides">
-        <!-- <div class="numbertext">1 / 9</div> -->
-        <img src="Images/gallery/chickens.jpg" class="photoWHV">
-      </div>  
-      <div class="mySlides">
-        <!-- <div class="numbertext">2 / 9</div> -->
-        <img src="Images/gallery/pots.jpg" class="photoWHV">
-      </div>  
-      <div class="mySlides">
-        <!-- <div class="numbertext">3 / 9</div> -->
-        <img src="Images/gallery/grapes.jpg" class="photoWHV">
-      </div>      
-      <div class="mySlides">
-        <!-- <div class="numbertext">4 / 9</div> -->
-        <img src="Images/gallery/fresh green.jpg" class="photoWHV">
-      </div>
-      <div class="mySlides">
-        <!-- <div class="numbertext">5 / 9</div> -->
-        <img src="Images/gallery/onion.jpg" class="photoWHV">
-      </div>  
-      <div class="mySlides">
-        <!-- <div class="numbertext">6 / 9</div> -->
-        <img src="Images/gallery/green.jpg" class="photoWHV">
-      </div> 
-      <div class="mySlides">
-        <!-- <div class="numbertext">7 / 9</div> -->
-        <img src="Images/gallery/vegetables.jpg" class="photoWHV">
-      </div>      
-      <div class="mySlides">
-        <!-- <div class="numbertext">8 / 9</div> -->
-        <img src="Images/gallery/wheat.jpg" class="photoWHV">
-      </div>
-      <div class="mySlides">
-        <!-- <div class="numbertext">9 / 9</div> -->
-        <img src="Images/gallery/sheeps.jpg" class="photoWHV">
-      </div>      
-      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-      <a class="next" onclick="plusSlides(1)">&#10095;</a>
-  <!-- /Image View -->
-  
+      <div class="modal-content">
+        <div class="mySlides">
+          <img src="Images/gallery/chickens.jpg" class="photoWHV">
+        </div>  
+        <div class="mySlides">
+          <img src="Images/gallery/pots.jpg" class="photoWHV">
+        </div>  
+        <div class="mySlides">
+          <img src="Images/gallery/grapes.jpg" class="photoWHV">
+        </div>      
+        <div class="mySlides">
+          <img src="Images/gallery/fresh green.jpg" class="photoWHV">
+        </div>
+        <div class="mySlides">
+          <img src="Images/gallery/onion.jpg" class="photoWHV">
+        </div>  
+        <div class="mySlides">
+          <img src="Images/gallery/green.jpg" class="photoWHV">
+        </div> 
+        <div class="mySlides">
+          <img src="Images/gallery/vegetables.jpg" class="photoWHV">
+        </div>      
+        <div class="mySlides">
+          <img src="Images/gallery/wheat.jpg" class="photoWHV">
+        </div>
+        <div class="mySlides">
+          <img src="Images/gallery/sheeps.jpg" class="photoWHV">
+        </div>      
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        <!-- /Image View -->
       </div>
     </div>
     <br>
