--- a/galeria.html
+++ b/galeria.html
@@ -38,7 +38,7 @@
     <ul class="navMenu">
       <a href="index.html"><li class="menuText">INICIO</li></a>
       <a href="quemsomos.html"><li class="menuText">QUEM SOMOS</li></a>
-      <a href="galeria.html"><li class="menuText">GALERIA</li></a>
+      <a href="#"><li class="menuText">GALERIA</li></a>
       <a href="produtos.html"><li class="menuText">PRODUTOS</li></a>
       <a href="contatos.html"><li class="menuText">CONTATOS</li></a>
       <a href="marcas.html"><li class="menuText">MARCAS</li></a>
@@ -74,7 +74,7 @@
         <img src="Images/gallery/wheat.jpg" class="photoWH" onclick="openModal();currentSlide(8)">
       </div>
       <div class="photo">
-        <img src="Images/gallery/sheeps.jpg" class="photoWH" onclick="openModal();currentSlide(9)"  >
+        <img src="Images/gallery/sheeps.jpg" class="photoWH" onclick="openModal();currentSlide(9)">
       </div>
     </div>
   <div id="imageView" class="modal">
