--- a/quemsomos.html
+++ b/quemsomos.html
@@ -45,15 +45,18 @@
       <a href="associados.html"><li class="menuText">ASSOCIADOS</li></a>
     </ul>
   </nav>
-  <div class="welcome">
-    </br><h1>Quem Somos</h1>
-    </br>Constituída em 1982 e sediada na cidade do Cartaxo, a LAVRICARTAXO - Cooperativa Agro-Pecuária do Cartaxo, C.R.L. (antigo Grémio da Lavoura) é uma entidade com estatuto jurídico de cooperativa agrícola, composta por vários associados que procuraram criar uma estrutura forte e competitiva no sector da comercialização de produtos para a agricultura.
-    </br></br>Apresentamos soluções para uma vasta franja do sector, nomeadamente: Adubos, Agro-Químicos, Produtos Fitofarmacêuticos, Rações, Máquinas, entre outros.
-    </br></br>Na LAVRICARTAXO damos uma atenção especial à vitivinicultura, para o efeito apostamos em serviços com formação, informação e qualidade para apoiar qualquer exploração no desenvolvimento dessa actividade, tão importante para a nossa zona e país. 
-    </br></br>Sendo uma cooperativa agrícola, somos uma instituição transparente e organizada, numa estrutura com três órgãos sociais clássicos e independentes, Assembleia Geral, Direcção e Conselho Fiscal, que garantem o correcto funcionamento da instituição.
-    </br></br>Consulte-nos ou visite-nos e comprove a qualidade dos nossos serviços e produtos! Estamos sempre ao dispôr dos nossos associados, fornecedores e clientes para juntos construírmos uma agricultura melhor, mais produtiva e competitiva!</br></br>
+  <div class="main">
+    <div class="welcome">
+      </br><h1>Quem Somos</h1>
+      </br>Constituída em 1982 e sediada na cidade do Cartaxo, a LAVRICARTAXO - Cooperativa Agro-Pecuária do Cartaxo, C.R.L. (antigo Grémio da Lavoura) é uma entidade com estatuto jurídico de cooperativa agrícola, composta por vários associados que procuraram criar uma estrutura forte e competitiva no sector da comercialização de produtos para a agricultura.
+      </br></br>Apresentamos soluções para uma vasta franja do sector, nomeadamente: Adubos, Agro-Químicos, Produtos Fitofarmacêuticos, Rações, Máquinas, entre outros.
+      </br></br>Na LAVRICARTAXO damos uma atenção especial à vitivinicultura, para o efeito apostamos em serviços com formação, informação e qualidade para apoiar qualquer exploração no desenvolvimento dessa actividade, tão importante para a nossa zona e país. 
+      </br></br>Sendo uma cooperativa agrícola, somos uma instituição transparente e organizada, numa estrutura com três órgãos sociais clássicos e independentes, Assembleia Geral, Direcção e Conselho Fiscal, que garantem o correcto funcionamento da instituição.
+      </br></br>Consulte-nos ou visite-nos e comprove a qualidade dos nossos serviços e produtos! Estamos sempre ao dispôr dos nossos associados, fornecedores e clientes para juntos construírmos uma agricultura melhor, mais produtiva e competitiva!</br></br>
+    </div>
+    <br>
+    <br>
   </div>
-  
 </body>
 <footer class="footerBottom">
   <div class="wheretofindusFooter">
