--- a/contatos.html
+++ b/contatos.html
@@ -10,7 +10,10 @@
     <link rel="stylesheet" href="CSS/style.css" type="text/css">
     <link rel="stylesheet" href="fontawesome/css/all.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="Css/bootstrap.min.css"> <!--Bootstrap está a entrar em confito com o style do resto da página-->
+
+    <!--Bootstrap está a entrar em confito com o style do resto da página-->
+    <link rel="stylesheet" href="Css/bootstrap.min.css"> 
+    
     <script src="JS/script.js"></script>
     <title>Lavricartaxo</title>
 </head>
@@ -37,67 +40,58 @@
       </div>          
     </div>    
   </div>   
-      <nav>
-        <ul class="navMenu">
-          <a href="index.html"><li class="menuText">INICIO</li></a>
-          <a href="quemsomos.html"><li class="menuText">QUEM SOMOS</li></a>
-          <a href="galeria.html"><li class="menuText">GALERIA</li></a>
-          <a href="produtos.html"><li class="menuText">PRODUTOS</li></a>
-          <a href="#"><li class="menuText">CONTATOS</li></a>
-          <a href="marcas.html"><li class="menuText">MARCAS</li></a>
-          <a href="associados.html"><li class="menuText">ASSOCIADOS</li></a>
-        </ul>
-      </nav>
-    <div class="welcome">
-      <div class="info">
-        <div class="mapa">
-          <h1></br>Encontre-nos aqui</h1>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12373.9691393483!2d-8.791160000000001!3d39.163528!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb27463f5a3d96d77!2sLavricartaxo-Cooperativa%20Agro-Pecu%C3%A1ria%20do%20Cartaxo%20C.R.L.!5e0!3m2!1spt-PT!2spt!4v1616068831267!5m2!1spt-PT!2spt" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </div>
-      </div>
-    </div>
-        <!--<div class="col-sm-6" class="contact-address">
-            <h2></br>Endereço </h2>
-            <ul>
-                <li class="contact-info"><span> Address:</span>Rua Batalhoz, n.81 </li></br>
-                <li class="contact-info"><span> Código Postal:</span> 2070-069 Cartaxo Portugal </li></br>
-                <li class="contact-info"><span> Telefone:</span> (351) 243 700 240 </li></br>
-                <li class="contact-info"><span> Fax:</span> (351) 243 700 249 </li></br>
-                <li class="contact-info"><span> Email:</span><a href="" > geral@lavricartaxo.pt</a></li>
-            </ul>                            
-        </div>-->
-  <!-- Contact Section -->
-  <section id="contact">
-    <div class="contact container">
-    </br><div><h1 class="section-title">Informações <span>de contacto</span></h1></div>
-      <div class="contact-items">
-        <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png"/></div>
-          <div class="contact-info">
-            <h2>Endereço</h2>
-            <p>Rua Batalhoz, n.81</p>
-            <p>2070-069 Cartaxo, Portugal</p>
-          </div>
-        </div>
-        <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png"/></div>
-          <div class="contact-info">
-            <h2>Email</h2>
-            <a href="geral@lavricartaxo.pt" class="contact-a">geral@lavricartaxo.pt</a>
-          </div>
-        </div>
-        <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png"/></div>
-          <div class="contact-info">
-            <h2>Telefone/Fax</h2>
-            <p>(+351) 243 700 240</p>
-            <p>(+351) 243 700 249</p>
+    <nav>
+      <ul class="navMenu">
+        <a href="index.html"><li class="menuText">INICIO</li></a>
+        <a href="quemsomos.html"><li class="menuText">QUEM SOMOS</li></a>
+        <a href="galeria.html"><li class="menuText">GALERIA</li></a>
+        <a href="produtos.html"><li class="menuText">PRODUTOS</li></a>
+        <a href="#"><li class="menuText">CONTATOS</li></a>
+        <a href="marcas.html"><li class="menuText">MARCAS</li></a>
+        <a href="associados.html"><li class="menuText">ASSOCIADOS</li></a>
+      </ul>
+    </nav>
+    <div class="main">
+      <div class="welcome">
+        <div class="info">
+          <div class="mapa">
+            <h1></br>Encontre-nos aqui</h1>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12373.9691393483!2d-8.791160000000001!3d39.163528!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb27463f5a3d96d77!2sLavricartaxo-Cooperativa%20Agro-Pecu%C3%A1ria%20do%20Cartaxo%20C.R.L.!5e0!3m2!1spt-PT!2spt!4v1616068831267!5m2!1spt-PT!2spt" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-  <!-- End Contact Section -->
+      <!-- Contact Section -->
+      <section id="contact">
+        <div class="contact container">
+        </br><div><h1 class="section-title">Informações <span>de contacto</span></h1></div>
+          <div class="contact-items">
+            <div class="contact-item">
+              <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png"/></div>
+              <div class="contact-info">
+                <h2>Endereço</h2>
+                <p>Rua Batalhoz, n.81</p>
+                <p>2070-069 Cartaxo, Portugal</p>
+              </div>
+            </div>
+            <div class="contact-item">
+              <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png"/></div>
+              <div class="contact-info">
+                <h2>Email</h2>
+                <a href="geral@lavricartaxo.pt" class="contact-a">geral@lavricartaxo.pt</a>
+              </div>
+            </div>
+            <div class="contact-item">
+              <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png"/></div>
+              <div class="contact-info">
+                <h2>Telefone/Fax</h2>
+                <p>(+351) 243 700 240</p>
+                <p>(+351) 243 700 249</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End Contact Section -->
       <div class="col-sm-6">
         <h1></br>Contacte-nos</br></br></h1>
       </div>
@@ -130,7 +124,7 @@
         <button type="reset" class="btn btn-danger" >Limpar</button>
       </form>
     </div>
-
+  </div>
 </body>
 <footer class="footerBottom">
   <div class="wheretofindusFooter">
