--- a/marcas.html
+++ b/marcas.html
@@ -45,88 +45,91 @@
       <a href="associados.html"><li class="menuText">ASSOCIADOS</li></a>
     </ul>
   </nav>
-  <div class="welcome">
-  </br><h1><b>As nossas marcas</b></h1></br></br>
-  <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;" ><h2>Adubos</h2></div>
-    <a href="" >
-      <div>
-        <img src="Images/marcas/deiba.png" style="float:left;" width="150px">
-      </div>
-    </a>
-    <a href="" >
-      <div >
-        <img src="Images/marcas/cadubal.png" style="float:left; " width="150px">
-      </div>
-    </a>
-    <a href="">
-      <div >
-        <img src="Images/marcas/nutrofertil.png" width="150px">
-      </div>
-    </a></br>
+  <div class="main">
+    <div class="welcome">
+    </br><h1><b>As nossas marcas</b></h1></br></br>
+    <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;" ><h2>Adubos</h2></div>
+      <a href="" >
+        <div>
+          <img src="Images/marcas/deiba.png" style="float:left;" width="150px">
+        </div>
+      </a>
+      <a href="" >
+        <div >
+          <img src="Images/marcas/cadubal.png" style="float:left; " width="150px">
+        </div>
+      </a>
+      <a href="">
+        <div >
+          <img src="Images/marcas/nutrofertil.png" width="150px">
+        </div>
+      </a></br>
+    
+    <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;"><h2>Agroquimicos</h2></div>
+      <a href="" >
+        <div>
+          <img src="Images/marcas/basf.png" style="float:left;" width="150px">
+        </div>
+      </a>
+      <a href="" >
+        <div >
+          <img src="Images/marcas/belchim.png" style="float:left; " width="150px">
+        </div>
+      </a>
+      <a href="">
+        <div >
+          <img src="Images/marcas/epagro.png" style="float:left; " width="150px">
+        </div>
+      </a>
+      <a href="" >
+        <div>
+          <img src="Images/marcas/iqv.png" width="150px">
+        </div>
+      </a></br>
+    
   
-  <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;"><h2>Agroquimicos</h2></div>
-    <a href="" >
-      <div>
-        <img src="Images/marcas/basf.png" style="float:left;" width="150px">
-      </div>
-    </a>
-    <a href="" >
-      <div >
-        <img src="Images/marcas/belchim.png" style="float:left; " width="150px">
-      </div>
-    </a>
-    <a href="">
-      <div >
-        <img src="Images/marcas/epagro.png" style="float:left; " width="150px">
-      </div>
-    </a>
-    <a href="" >
-      <div>
-        <img src="Images/marcas/iqv.png" width="150px">
-      </div>
-    </a></br>
+    <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;"><h2>Alimentação Aminal</h2></div>
+      <a href="" >
+        <div>
+          <img src="Images/marcas/biona.png" width="150px">
+        </div>
+      </a></br>
   
-
-  <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;"><h2>Alimentação Aminal</h2></div>
-    <a href="" >
-      <div>
-        <img src="Images/marcas/biona.png" width="150px">
-      </div>
-    </a></br>
-
-    <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;"><h2>Petcare</h2></div>
-    <a href="" >
-      <div>
-        <img src="Images/marcas/agrolex.png" width="150px">
-      </div>
-    </a></br>
-
-    <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;"><h2>Veterinária</h2></div>
-    <a href="">
-      <div>
-        <img src="Images/marcas/fertiprado.png" style="float:left; " width="150px">
-      </div>
-    </a>
-    <a href="">
-      <div>
-        <img src="Images/marcas/fito.png" width="150px">
-      </div>
-    </a></br>
-
-    <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;"><h2>Bricolage</h2></div>
-    <a href="" >
-      <div>
-        <img src="Images/marcas/einhell.png" width="150px">
-      </div>
-    </a></br>
-
-    <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;"><h2>Máquinas</h2></div>
-    <a href="">
-      <div>
-        <img src="Images/marcas/lena.png" width="150px">
-      </div>
-    </a></br>
-</div>  
+      <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;"><h2>Petcare</h2></div>
+      <a href="" >
+        <div>
+          <img src="Images/marcas/agrolex.png" width="150px">
+        </div>
+      </a></br>
+  
+      <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;"><h2>Veterinária</h2></div>
+      <a href="">
+        <div>
+          <img src="Images/marcas/fertiprado.png" style="float:left; " width="150px">
+        </div>
+      </a>
+      <a href="">
+        <div>
+          <img src="Images/marcas/fito.png" width="150px">
+        </div>
+      </a></br>
+  
+      <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;"><h2>Bricolage</h2></div>
+      <a href="" >
+        <div>
+          <img src="Images/marcas/einhell.png" width="150px">
+        </div>
+      </a></br>
+  
+      <div style="width:100%; float:left;font-size:1.3em; margin-bottom:10px; color:#000;"><h2>Máquinas</h2></div>
+      <a href="">
+        <div>
+          <img src="Images/marcas/lena.png" width="150px">
+        </div>
+      </a></br>
+  </div>  
+  </div>
+  
 
   
 </body>
@@ -138,10 +141,13 @@
     <p>CONTACTE-NOS<br><br>243 700 240<br>243 700 249</p>
   </div>
   <div class="openFooter">
-    <p>ABERTOS<br><br>De Segunda a Sexta-feira das 9H ás 13H e das 14:30H ás 18:30H</br>Aos Sábados das 9H ás 12:30H</p>
+    <p>ABERTOS<br><br>De Segunda a Sexta-feira<br>Das 9H ás 13H e das 14:30H ás 18:30H</br>Aos Sábados das 9H ás 12:30H</p>
   </div>
-    <br><br><br><br><br><br>
+  <div class="copyright">
     <p>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.</p>
+  </div>
+  <div class="desendesign">
     <p>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
+  </div> 
 </footer>
 </html>
