--- a/contatos.html
+++ b/contatos.html
@@ -13,7 +13,7 @@
 
     <!--Bootstrap está a entrar em confito com o style do resto da página-->
     <link rel="stylesheet" href="Css/bootstrap.min.css"> 
-    
+
     <script src="JS/script.js"></script>
     <title>Lavricartaxo</title>
 </head>
@@ -126,7 +126,7 @@
     </div>
   </div>
 </body>
-<footer class="footerBottom">
+<footer class="footerBottom"> <!--Footer-->
   <div class="wheretofindusFooter">
     <p>ONDE NOS ENCONTRAR<br><br>Rua Batalhoz nr.81<br>2070-069 Cartaxo</p>
   </div>
@@ -134,10 +134,13 @@
     <p>CONTACTE-NOS<br><br>243 700 240<br>243 700 249</p>
   </div>
   <div class="openFooter">
-    <p>ABERTOS<br><br>De Segunda a Sexta-feira das 9H ás 13H e das 14:30H ás 18:30H</br>Aos Sábados das 9H ás 12:30H</p>
+    <p>ABERTOS<br><br>De Segunda a Sexta-feira<br>Das 9H ás 13H e das 14:30H ás 18:30H</br>Aos Sábados das 9H ás 12:30H</p>
   </div>
-    <br><br><br><br><br><br>
+  <div class="copyright">
     <p>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.</p>
+  </div>
+  <div class="desendesign">
     <p>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
+  </div> 
 </footer>
 </html>
