--- a/contatos.html
+++ b/contatos.html
@@ -128,13 +128,16 @@
 </body>
 <footer class="footerBottom"> <!--Footer-->
   <div class="wheretofindusFooter">
-    <p>ONDE NOS ENCONTRAR<br><br>Rua Batalhoz nr.81<br>2070-069 Cartaxo</p>
+    <p>ONDE NOS ENCONTRAR<br><br>Rua Batalhoz Nr.81<br>2070-069 Cartaxo<br>Portugal</p>
   </div>
   <div class="contactusFooter">
     <p>CONTACTE-NOS<br><br>243 700 240<br>243 700 249</p>
   </div>
   <div class="openFooter">
-    <p>ABERTOS<br><br>De Segunda a Sexta-feira<br>Das 9H ás 13H e das 14:30H ás 18:30H</br>Aos Sábados das 9H ás 12:30H</p>
+    <p><br><br>Sábados<br>9H - 12:30H</p>
+  </div>
+  <div class="openFooterI">
+    <p>ATENDIMENTO<br><br>Segunda a Sexta-feira<br>9H - 13H<br>14:30H - 18:30H</p>
   </div>
   <div class="copyright">
     <p>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.</p>
