--- a/galeria.html
+++ b/galeria.html
@@ -78,7 +78,9 @@
       </div>
     </div>
   <div id="imageView" class="modal">
-    <div class="close" onclick="closeModal()">&times;</div>
+    <div class="close" onclick="closeModal()">
+      &times;
+    </div>
       <div class="modal-content">
         <div class="mySlides">
           <img src="Images/gallery/chickens.jpg" class="photoWHV">
