--- a/index.html
+++ b/index.html
@@ -72,89 +72,89 @@
       <div class="marcas">
         <a href="" >
           <div class="marca">
-            <img src="Images/marcas/agrolex.png" >
+            <img src="Images/marcas/agrolex.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/sirosubs.png" >
+            <img src="Images/marcas/sirosubs.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/belchim.png" >
+            <img src="Images/marcas/belchim.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/nutrofertil.png" >
+            <img src="Images/marcas/nutrofertil.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/biona.png">
+            <img src="Images/marcas/biona.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/cadubal.png" >
+            <img src="Images/marcas/cadubal.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/deiba.png" >
+            <img src="Images/marcas/deiba.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/lena.png">
+            <img src="Images/marcas/lena.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/einhell.png" >
+            <img src="Images/marcas/einhell.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/epagro.png" >
+            <img src="Images/marcas/epagro.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/fertiprado.png" >
+            <img src="Images/marcas/fertiprado.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/fito.png">
+            <img src="Images/marcas/fito.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/iqv.png">
+            <img src="Images/marcas/iqv.png" onmouseover="brandPause()" onmouseout="brandUnpause()">
           </div>
         </a><!--End carousel-->
       
         <!--Double Brands-->
         <a href="" >
           <div class="marca">
-            <img src="Images/marcas/agrolex.png" >
+            <img src="Images/marcas/agrolex.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/sirosubs.png" >
+            <img src="Images/marcas/sirosubs.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/belchim.png" >
+            <img src="Images/marcas/belchim.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/nutrofertil.png" >
+            <img src="Images/marcas/nutrofertil.png">
           </div>
         </a>
         <a href="">
@@ -164,12 +164,12 @@
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/cadubal.png" >
+            <img src="Images/marcas/cadubal.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/deiba.png" >
+            <img src="Images/marcas/deiba.png">
           </div>
         </a>
         <a href="">
@@ -179,17 +179,17 @@
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/einhell.png" >
+            <img src="Images/marcas/einhell.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/epagro.png" >
+            <img src="Images/marcas/epagro.png">
           </div>
         </a>
         <a href="">
           <div class="marca">
-            <img src="Images/marcas/fertiprado.png" >
+            <img src="Images/marcas/fertiprado.png">
           </div>
         </a>
         <a href="">
