--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <script src="JS/script.js"></script>
       <title>Lavricartaxo</title>
   </head>
-<body onload="slideshow()">
+<body onload="slideshow()" onresize="resize()">
   <div class="header"> <!--Header-->
     <div class="top"> <!--Header Subsection Top-->
       <div class="logo"> <!--Div logo-->
@@ -40,13 +40,13 @@
   <button class="sideBtnPhone leftBtn" id="sideBtnLeft" onclick="sidebuttonL()"><i class="fas fa-chevron-left"></i></button> <!--Sidebutton Phone Mode-->
   <nav id="nav">
     <ul class="navMenu"> <!--Menu-->
-      <a href="#"><li class="menuText">INICIO</li></a>
-      <a href="quemsomos.html"><li class="menuText">QUEM SOMOS</li></a>
-      <a href="galeria.html"><li class="menuText">GALERIA</li></a>
-      <a href="produtos.html"><li class="menuText">PRODUTOS</li></a>
-      <a href="contatos.html"><li class="menuText">CONTATOS</li></a>
-      <a href="marcas.html"><li class="menuText">MARCAS</li></a>
-      <a href="associados.html"><li class="menuText">ASSOCIADOS</li></a>
+      <a href="#"><li class="menuText" id="op1">INICIO</li></a>
+      <a href="quemsomos.html"><li class="menuText" id="op2">QUEM SOMOS</li></a>
+      <a href="galeria.html"><li class="menuText" id="op3">GALERIA</li></a>
+      <a href="produtos.html"><li class="menuText" id="op4">PRODUTOS</li></a>
+      <a href="contatos.html"><li class="menuText" id="op5">CONTATOS</li></a>
+      <a href="marcas.html"><li class="menuText" id="op6">MARCAS</li></a>
+      <a href="associados.html"><li class="menuText" id="op7">ASSOCIADOS</li></a>
     </ul>
   </nav>
   <div class="main"> <!--"Body"/Main/Content-->
